--- a/src/propspace_backend/Cargo.toml
+++ b/src/propspace_backend/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = "0.8"
 ic-cdk = "0.7"
+ic-cdk-macros = "0.8.4"
 ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
 serde = "*"
 serde_derive = "*"
