--- a/src/propspace_backend/Cargo.toml
+++ b/src/propspace_backend/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+bincode = "1.3.3"
 candid = "0.8"
 ic-cdk = "0.7"
 ic-cdk-macros = "0.8.4"
