--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ["src/propspace_backend", "src/propspace_dip721","src/propspace_payments"]
+members = ["backend/propspace_backend", "backend/propspace_dip721","backend/propspace_payments"]
 
 resolver = "2"
