--- a/backend/propspace_payments/Cargo.toml
+++ b/backend/propspace_payments/Cargo.toml
@@ -5,4 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+bincode = "1.3.3"
+candid = "0.8"
+ic-cdk = "0.7"
+ic-cdk-macros = "0.8.4"
+ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+serde = "*"
+serde_derive = "*"
